# pandaseq-sam

./: .gitignore  .indent.pro  .travis.yml  Makefile.am  README  README.md  args.c  build-macos-pkg.in  configure.ac  main.c  pandaseq-sam-1.pc.in  pandaseq-sam-1.vapi  pandaseq-sam-mux.h  pandaseq-sam.1  pandaseq-sam.h  reader.c  seqid.c  support.c
debian/: changelog  control  copyright  pandaseq-sam-dev.install  pandaseq-sam.install  rules
